592067:TISSQAUAT-688:Internet Explorer - Issue with Overlap of Dropdown in Cart &Payment Page issue fix

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
@@ -27468,7 +27468,7 @@ div.other-sellers .other-sellers-table tbody tr td>div.sellerAddToBagTitle:after
 	color:#000;
 	font-size: 14px !important;
     margin-top: 5px;
-    display: block;
+    display: block !important;/* TISSQAUAT-688 */
 }
 body .account .right-account .order-history.order-details li.item .status .message.processing-stage-arrow1 {
 	left:-100%;
